--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,18 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.3.4</version>
+                <configuration>
+                    <repository>garycoding/cloudworkflow-activiti-engine</repository>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
