--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+spring.mvc.async.request-timeout=0
+server.tomcat.accept-count=5000
+server.tomcat.max-threads=200
+server.tomcat.max-connections=-1
+
